# mlx_conversion

./: .gitignore  CLAUDE.md  RESULTS.md  llama_cpp_meralion.patch
client_eval/: eval_gguf_asr.py  eval_hf_asr.py  eval_mlx_asr.py  eval_pypi_asr.py  test_prompt_format.py
eval_outputs/: idpc_short_ASR_v2.jsonl  ytb_asr_batch1.jsonl  ytb_asr_batch2.jsonl  ytb_asr_batch3_chinese.jsonl  ytb_asr_batch3_malay.jsonl  ytb_asr_batch3_tamil_v2.jsonl
eval_outputs_gguf/: idpc_short_ASR_v2.jsonl  ytb_asr_batch1.jsonl  ytb_asr_batch2.jsonl  ytb_asr_batch3_chinese.jsonl  ytb_asr_batch3_malay.jsonl  ytb_asr_batch3_tamil_v2.jsonl
eval_outputs_pypi/10b-8bit/: ytb_asr_batch1.jsonl  ytb_asr_batch3_chinese.jsonl
eval_outputs_pypi/10b-8bit-sampler/: ytb_asr_batch1.jsonl  ytb_asr_batch3_chinese.jsonl
eval_outputs_pypi/10b-8bit-v2/: ytb_asr_batch1.jsonl
eval_outputs_pypi/3b/: ytb_asr_batch1.jsonl  ytb_asr_batch3_chinese.jsonl
eval_outputs_pypi/3b-sampler/: ytb_asr_batch1.jsonl  ytb_asr_batch3_chinese.jsonl
eval_outputs_pypi/3b-v2/: ytb_asr_batch1.jsonl
meralion-mlx-2-10b/: README.md  setup.sh
meralion-mlx-2-10b/meralion_mlx/: processor.py
meralion-mlx-2-10b/scripts/: benchmark.py  quantize.py  quantize_for_mlxlm.py
meralion-mlx-2-3b/: pyproject.toml
meralion-mlx-2-3b/meralion_mlx/: __init__.py  adaptor.py  model.py  whisper_encoder.py
meralion-mlx-2-3b/scripts/: convert.py  download.py  inference.py
meralion-mlx-2-3b/tests/: test_components.py
scripts/: extract_decoder_for_gguf.py
