[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meralion-mlx"
version = "0.1.0"
description = "MERaLiON AudioLLM optimized for Apple Silicon via MLX"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "mlx>=0.18.0",
    "mlx-lm>=0.20.0",
    "numpy>=1.24.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "safetensors>=0.4.0",
    "huggingface-hub>=0.20.0",
    "tokenizers>=0.15.0",
    "transformers>=4.46.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
benchmark = ["torch>=2.0.0", "psutil>=5.9.0"]
dev = ["pytest>=7.0.0"]

[project.scripts]
meralion-download = "scripts.download:main"
meralion-convert = "scripts.convert:main"
meralion-quantize = "scripts.quantize:main"
meralion-infer = "scripts.inference:main"
meralion-bench = "scripts.benchmark:main"

[tool.setuptools.packages.find]
include = ["meralion_mlx*", "scripts*"]
